syntax = "proto3";

message MessageType {
  message XType {
    message YType {
      int32 z=3;
    };
    repeated YType y=2;
  };
  repeated XType x=1;
};